--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 <body>
     
+    <h3> Welcome to SagiousPass </h3>
+    <label> Enter your fav Word: </label> <br> 
+    <input type="text" id="hisfavWord"> <br> 
+    <br> 
+    <label> Enter the Website for the Password: </label> <br> 
+    <input type="text" id="theWeb"> <br>
+    <br>
+    <button type="button" id="theButton" class="button"> Submit your Word and Website </button>
 
 
     <script src="index.js"></script>
+
 </body>
 </html>
