--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>SagiousPass</title>
 </head>
 <body>
     
@@ -18,6 +18,8 @@
     <br>
     <button type="button" id="theButton" class="button"> Submit your Word and Website </button>
 
+
+    <h4> A better Password to remember is: </h4>
 
     <script src="index.js"></script>
 
