--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 </head>
 <body>
     
-    <h3> Welcome to SagiousPass </h3>
-    <label> Enter your fav Word: </label> <br> 
-    <input type="text" id="hisfavWord"> <br> 
-    <br> 
-    <label> Enter the Website for the Password: </label> <br> 
-    <input type="text" id="theWeb"> <br>
-    <br>
-    <button type="button" id="theButton" class="button"> Submit your Word and Website </button>
+   <div class="nav">
+    <a class="header"> Welcome to SagiousPass </a>
+    <a class="clear"> __________</a>
+    <a href="login.html" class="link">Log-In</a>
+    <a href="signup.html" class="link">Sign-Up</a>
+    </div>
 
 
-    <h4> A better Password to remember is: </h4>
 
-    <script src="index.js"></script>
+    <p class="homepage">
+    Do you keep getting notified your passwords are weak?
+    Do you forget passwords very easily? <br>
+    Join us and we will help you!
+    </p>
+
+
+
+    <script>
+    </script>
 
 </body>
 </html>
