--- a/index.html
+++ b/index.html
@@ -10,24 +10,37 @@
 <body>
     
    <div class="nav">
-    <a class="header"> Welcome to SagiousPass </a>
+    <a href="index.html" class="header"> Welcome to SagiousPass </a>
     <a class="clear"> __________</a>
     <a href="login.html" class="link">Log-In</a>
     <a href="signup.html" class="link">Sign-Up</a>
     </div>
 
 
-
     <p class="homepage">
     Do you keep getting notified your passwords are weak?
-    Do you forget passwords very easily? <br>
+    Do you forget passwords very easily?
     Join us and we will help you!
     </p>
 
+    <div class="nologin">
+    <p class="twoHead"> Use without Account:  </p>
+    <div class="txt_field">
+        <label >Favourite Word: </label> <br>
+        <input type="text" required> 
+      </div>
+      <div class="txt_field">
+        <label>Website you are on: </label><br>
+        <input type="text" required> 
+      </div>
+      <div class="txt_field">
+        <label>Favourite Symbol: </label><br>
+        <input type="text" required> 
+      </div>
+      <button class="button"> Password finden </button>
+    </div>
 
 
-    <script>
-    </script>
 
 </body>
 </html>
