--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="nav">
-        <a class="header"> Welcome to SagiousPass </a>
+        <a href="index.html" class="header"> Welcome to SagiousPass </a>
         <a class="clear"> __________</a>
         <a href="login.html" class="link">Log-In</a>
         <a href="signup.html" class="link">Sign-Up</a>
