--- a/newTry/checkPass.html
+++ b/newTry/checkPass.html
@@ -5,31 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="secPage.css">
+
+    <script unsafe-inline charset="utf-8" type="text/javascript" src="checkPass.js"></script>
+
     <title>SagiousPass</title>
 </head>
-<body>
+<body> 
 
 
     <div class="header"></div>
-    <div class="heading"> <p> SagiousPass </p> </div>
+    <div class="heading CheckPass"> <p>Check Password</p> </div>
 
-    <a class="getPass" ></a>
-    <a  class="getPassT" href="getPass.html"> <p>Get a Password </p> </a>
+    <a class="one" ></a>
+    <input id="TestPass" type="password" placeholder="Password..." class="oneT"> 
 
-    <a class="checkPass"></a>
-    <a class="checkPassT" href="checkPass.html" > <p >Check Password </p> </a>
+    <button onclick="überprüfung()" class="CheckT"> Check </button>
 
-    <a class="SavePass"></a>
-    <a class="SavePassT" href="savePass.html"> <p >Save Password </p> </a>
+    <a class="backc"></a>
+    <img class="imgc" src="/images/return.png">
+    <a class="pressfuncc" href="index.html">  </a>
 
-    <a class="SignIn"></a>
-    <a  class="SignInT" href="SignIn.html"> <p class="p3">Sign In </p> </a>
-
-    <a class="SignUp"></a>
-    <a  class="SignUpT" href="SignUp.html"> <p class="p3">Sign Up </p> </a>
-    
-
-
-    
 </body>
 </html>
