--- a/newTry/getPass.html
+++ b/newTry/getPass.html
@@ -5,31 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="secPage.css">
     <title>SagiousPass</title>
 </head>
-<body>
+<body> 
 
 
     <div class="header"></div>
-    <div class="heading"> <p> SagiousPass </p> </div>
+    <div class="heading GetPass" > <p>Get a Password</p> </div>
 
-    <a class="getPass" ></a>
-    <a  class="getPassT" href="getPass.html"> <p>Get a Password </p> </a>
+    <a class="one" ></a>
+    <input type="text" placeholder="Favourite Word..." class="oneT"> 
 
-    <a class="checkPass"></a>
-    <a class="checkPassT" href="checkPass.html" > <p >Check Password </p> </a>
+    <a class="two"></a>
+    <input type="text" placeholder="Favourit Symbol..." class="twoT">
 
-    <a class="SavePass"></a>
-    <a class="SavePassT" href="savePass.html"> <p >Save Password </p> </a>
+    <a class="three"></a>
+    <input type="url" placeholder="Website Url..." class="threeT">
 
-    <a class="SignIn"></a>
-    <a  class="SignInT" href="SignIn.html"> <p class="p3">Sign In </p> </a>
+    <button class="SumbitT"> Submit </button>
 
-    <a class="SignUp"></a>
-    <a  class="SignUpT" href="SignUp.html"> <p class="p3">Sign Up </p> </a>
-    
+    <a class="backg"></a>
+    <img class="imgg" src="/images/return.png">
+    <a class="pressfuncg" href="index.html">  </a>
 
-
-    
 </body>
 </html>
