--- a/newTry/savePass.html
+++ b/newTry/savePass.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="secPage.css">
+
+    <script charset="utf-8" type="text/javascript" defer src="savePass.js"></script>
+
     <title>SagiousPass</title>
 </head>
 <body> 
