check verbessert und save angefange

--- a/newTry/savePass.html
+++ b/newTry/savePass.html
@@ -18,12 +18,12 @@
     <div class="heading SavePass"> <p> Save password</p> </div>
 
     <a class="one" ></a>
-    <input type="url" placeholder="Website url..." class="oneT"> 
+    <input type="url" placeholder="Website url..." class="oneT" id="url"> 
 
     <a class="two"></a>
-    <input type="password" placeholder="Password..." class="twoT">
+    <input type="password" placeholder="Password..." class="twoT" id="pw">
 
-    <button class="SaveT"> Save </button>
+    <button class="SaveT" id="saveButton"> Save </button>
 
     <a class="backs"></a>
     <img class="imgs" src="/images/return.png">
