--- a/Design3/index.html
+++ b/Design3/index.html
@@ -9,15 +9,22 @@
 </head>
 <body>
     
-    <div class="heading"><h1 class="header"> SagiousPass </h1></div>
-    
+    <div class="heading"> </div>
+    <label class="header_text"> SagiousPass </label>
 
-    <input type="password" placeholder="Type your Password" id="testPass">
-    <div class="line"></div>
+    <a class="getPass" href="getPass\getPass.html"> </a> 
+    <a href="getPass\getPass.html"> <img src="bilder/password.png" alt="check" class="getImg" href="getPass\getPass.html"> </a>
+    <a class="checkPass" href="checkPass\checkPass.html">  </a>
+    <a href="checkPass\checkPass.html"> <img src="bilder/check.png" alt="check" class="checkImg" href="checkPass\checkPass.html"> </a>
+    <a class="savePass" href="savePass\savePass.html">  </a>
+    <a href="savePass\savePass.html"> <img src="bilder/save.png" alt="check" class="saveImg" href="savePass\savePass.html"> </a>
 
-    <a href="findPass.html" class="find"> <p class="findT"<>FIND</p></a>
-    <a href="checkPass.html" class="check"><p class="checkT"<>CHECK</p></a>
-    <a href="savePass.html" class="save"><p class="saveT"<>SAVE</p></a>
+    <div class="body_box"> </div>
+    <label class="label">Welcome to your new Password manager!</label> 
+
+    <a class="login" href="login/login.html"> <a class="text" href="login/login.html"> LOGIN </a> </a>
+
+    <a class="register" href="register/register.html"> <a class="textr" href="register/register.html"> REGISTER </a> </a>
 
 
 </body>
