register UI erstellt

--- a/Design3/checkPass/checkPass.html
+++ b/Design3/checkPass/checkPass.html
@@ -31,7 +31,7 @@
     <div class="smallheader"></div>
     <label class="headertext"> Check your Password </label>
 
-    <input class="favWord" id="testpw" type="password" required="required" placeholder="Your Password">
+    <input class="pw" id="testpw" type="password" required="required" placeholder="Your Password">
 
     <span id="note"> Ihr Passwort ist:  </span>
 
